<resources>
    <string name="app_name">AniWatch</string>
    <string name="search_anime">Search anime…</string>
    <string name="ongoings">Ongoings</string>
    <string name="all">All</string>
    <string name="all_animes">All animes</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="anime_list">Anime list</string>
    <string name="apply_filters">Apply filters</string>
    <string name="genres">Genres</string>
    <string name="types">Types</string>
    <string name="year">Year</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="score">Score</string>
    <string name="ongoing">Ongoing</string>
    <string name="any_genres">Any selected genre</string>
    <string name="all_genres">All selected genre</string>
    <string name="season">Season</string>
    <string name="episodes">Episodes</string>
    <string name="type">Type</string>
    <string name="rating">Rating</string>
    <string name="type_colon">Type:</string>
    <string name="score_colon">Score:</string>
    <string name="rating_colon">Rating:</string>
    <string name="season_colon">Season:</string>
    <string name="aired_on">Aired on:</string>
    <string name="released_on">Released on:</string>
    <string name="next_episode">Next episode:</string>
    <string name="watch_online">Watch online</string>
    <string name="studio">Studio</string>
    <string name="studio_colon">Studio:</string>
    <string name="home">Home</string>
    <string name="episode">Episode</string>
    <string name="voice">Voice</string>
    <string name="sub">Sub</string>
    <string name="raw">RAW</string>
    <string name="load_error">Load error. Try again…</string>
    <string name="episode_not_found">Episode not found</string>
    <string name="episode_not_selected">Episode not selected</string>
    <string name="translation_not_selected">Translation not selected</string>
    <string name="auth_on_anime365">Authenticate on Anime365</string>
    <string name="auth_success">Success authenticate</string>
    <string name="list_empty">List empty</string>
    <string name="auth_on_shiki">Auth in Shikimori</string>
    <string name="auth_shiki_success">Success auth in shikimori!</string>
    <string name="my_score">My score</string>
    <string name="add_in_list">Add in list</string>
    <string name="no_more_episodes">No more episodes</string>
    <string name="shikimori_profile">Shikimori profile</string>
    <string name="auth">Authenticate</string>
    <string name="exit">Exit</string>
    <string name="lists">Lists</string>
    <string name="watching">Watching</string>
    <string name="completed">Completed</string>
    <string name="planned">Planned</string>
    <string name="dropped">Dropped</string>
    <string name="hold_on">On hold</string>
    <string name="authentication">Authentication…</string>
    <string name="no_name">No name</string>
    <string name="added_in_favorites">Added in favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="sm_anime_profile">Smotret-anime profile</string>
    <string name="exit_success">Exit success</string>
    <string name="isAuth">I\'m auth</string>
    <string name="alt_setting">Alter setting</string>
    <string name="alt_version">Alter version</string>
</resources>
