<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?dividerColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?backgroundColor"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <LinearLayout
            android:id="@+id/home_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:src="@drawable/ic_home"
                android:tint="?attr/iconColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:src="@drawable/ic_person"
                android:tint="?attr/iconColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/favorites_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:src="@drawable/ic_star"
                android:tint="?attr/iconColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:src="@drawable/ic_search"
                android:tint="?attr/iconColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/filter_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:src="@drawable/ic_filter"
                android:tint="?attr/iconColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>