<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_item"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/genres"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_expand"
                    android:tint="?iconColor" />
            </LinearLayout>

            <com.fellowcode.animewatcher.Utils.WrapContentListView
                android:id="@+id/genresList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="multipleChoice"
                android:background="@drawable/filter_item_noclick"
                android:animateLayoutChanges="true"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/genres_op"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/any_genres"
                android:textSize="20sp"
                android:background="@drawable/filter_item"/>

            <LinearLayout
                android:id="@+id/types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_item"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/types"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_expand"
                    android:tint="?iconColor" />
            </LinearLayout>

            <com.fellowcode.animewatcher.Utils.WrapContentListView
                android:id="@+id/typesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="multipleChoice"
                android:background="@drawable/filter_item_noclick"
                android:animateLayoutChanges="true"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_item">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/year"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:paddingEnd="40dp">

                    <EditText
                        android:id="@+id/year_from"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/filter_input"
                        android:digits="0123456789"
                        android:hint="@string/from"
                        android:inputType="number"
                        android:maxLength="4"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:textSize="20sp" />

                    <FrameLayout
                        android:layout_width="15dp"
                        android:layout_height="3dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="?android:textColor" />

                    <EditText
                        android:id="@+id/year_to"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/filter_input"
                        android:digits="0123456789"
                        android:hint="@string/to"
                        android:inputType="number"
                        android:maxLength="4"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:textSize="20sp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_item">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/score"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:paddingEnd="40dp">

                    <EditText
                        android:id="@+id/rating_from"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/filter_input"
                        android:digits="0123456789"
                        android:hint="@string/from"
                        android:inputType="number"
                        android:maxLength="4"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:textSize="20sp" />

                    <FrameLayout
                        android:layout_width="15dp"
                        android:layout_height="3dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="?android:textColor" />

                    <EditText
                        android:id="@+id/rating_to"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/filter_input"
                        android:digits="0123456789"
                        android:hint="@string/to"
                        android:inputType="number"
                        android:maxLength="4"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:textSize="20sp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/ongoingBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_item"
                android:paddingEnd="40dp"
                android:focusable="true"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/ongoing"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/ongoing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:clickable="false"
                    android:focusable="false"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?dividerColor"/>
    <Button
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters"
        android:textColor="#FFF"
        android:background="@drawable/watch_btn"/>
</LinearLayout>