<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shikimori_profile"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/shikiProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <FrameLayout
                    android:layout_width="65dp"
                    android:layout_height="65dp">
                    <com.github.ybq.android.spinkit.SpinKitView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/loader"
                        style="@style/SpinKitView.ThreeBounce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:SpinKit_Color="@color/colorAccent" />
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/userAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#437AB1"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lists"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/filter_item_noclick"
                android:paddingBottom="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="plannedClick"
                android:background="@drawable/filter_item"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:orientation="horizontal"
                android:minHeight="45dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/planned"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/plannedCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="watchingClick"
                android:background="@drawable/filter_item"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:orientation="horizontal"
                android:minHeight="45dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/watching"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/watchingCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="completedClick"
                android:background="@drawable/filter_item"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:orientation="horizontal"
                android:minHeight="45dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/completed"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/completedCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="droppedClick"
                android:background="@drawable/filter_item"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:orientation="horizontal"
                android:minHeight="45dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/dropped"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/droppedCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onHoldClick"
                android:background="@drawable/filter_item"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:orientation="horizontal"
                android:minHeight="45dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/hold_on"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/holdOnCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/shikiAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth"
            android:background="@drawable/watch_btn"
            android:textColor="#FFF"
            android:minHeight="35dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="authShikiClick"/>

        <Button
            android:visibility="gone"
            android:id="@+id/shikiExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:background="@drawable/watch_btn"
            android:textColor="#FFF"
            android:minHeight="35dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="exitShikiClick"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sm_anime_profile"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"/>

            <Button
                android:id="@+id/smAnimeAuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth"
                android:background="@drawable/watch_btn"
                android:textColor="#FFF"
                android:minHeight="35dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:onClick="smAnimeAuthClick"/>

            <Button
                android:visibility="gone"
                android:id="@+id/smAnimeExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:background="@drawable/watch_btn"
                android:textColor="#FFF"
                android:minHeight="35dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:onClick="smAnimeExitClick"/>
        </LinearLayout>

    </LinearLayout>



    <include layout="@layout/panel_main"/>

</LinearLayout>